Fix: wrap very long colony name

--- a/src/modules/dashboard/components/ColonyHome/ColonyHomeLayout.css
+++ b/src/modules/dashboard/components/ColonyHome/ColonyHomeLayout.css
@@ -100,7 +100,7 @@
   .leftAside {
     display: flex;
     align-items: center;
-    height: 71px;
+    min-height: 71px;
     width: 100%;
     border-bottom: 1px solid var(--temp-grey-13);
     grid-area: joinColony;
