--- a/src/modules/dashboard/components/ColonyHome/ColonySubscription/ColonySubscription.css
+++ b/src/modules/dashboard/components/ColonyHome/ColonySubscription/ColonySubscription.css
@@ -72,4 +72,8 @@
   .menuIcon svg {
     transform: scale(1.75);
   }
+
+  .colonyJoinBtn {
+    min-width: 100px;
+  }
 }
