--- a/src/modules/dashboard/components/SubscribedColoniesList/SubscribedColoniesList.css
+++ b/src/modules/dashboard/components/SubscribedColoniesList/SubscribedColoniesList.css
@@ -88,8 +88,7 @@
 
   .itemImage {
     composes: itemLink;
-    height: 28px;
-    width: 28px;
+    min-width: 34px;
     border-width: 2px;
   }
 
@@ -102,6 +101,12 @@
     display: flex;
     align-items: center;
     gap: 10px;
+  }
+
+  .dropdownItem > div:nth-child(2) {
+    padding-right: 10px;
+    white-space: break-spaces;
+    overflow-wrap: anywhere;
   }
 
   .activeColony > .dropdownItem {
@@ -129,6 +134,7 @@
 
   .scrollableContainer div[class*="DropdownMenu"] {
     max-height: 80vh;
+    max-width: 85vw;
     overflow-y: scroll;
   }
 
